# oblong

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  input.rs  main.rs  model.rs  ui.rs
src/input/: edit.rs  insert_column.rs  mod.rs  normal.rs
